@@ -74,6 +74,8 @@
   - Improved Flatpak support for Linux. (rderooy)
   - Fixed shelling from programs may not work when the
     shell config option is set. (Wengier)
+  - Applied hack to allow the low DMA channel detection
+    in the SB16 DIAGNOSE program to work. (Wengier)
   - Added support for the XDG_DATA_HOME environment
     variable for config directory in Linux. (rderooy)
   - Added support for compiling with pcap for Windows
